--- a/index.html
+++ b/index.html
@@ -5,5 +5,30 @@
   <body>
    <h1>IT 기사 모음</h1>  
     <a href="https://v.daum.net/v/20250309162323895">첫 번째 기사</a> 
-  </body>
+
+    <!DOCTYPE html>
+<html lang="ko">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>이주미의 웹페이지</title>
+</head>
+<body>
+
+    <a href="http://www.hanam.ac.kr">한남대학교 바로가기</a>
+
+    <br>
+    <video controls="" autoplay="" name="media"> 한남대 교가
+    <source src="../source/schoolsong.mp3" type="audio/mpeg">
+    </video> 
+
+    <br>
+    <video controls="" autoplay="" name="media"> 한남대 교가
+    <source src="https://www.hannam.ac.kr/data/about/schoolsong.mp3" type="audio/mpeg">
+    </video> 
+
+    <br>
+    유튜브 링크
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/nEvI_EdJJBI?si=PA_PiyjVGMFtvadn" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+</body>
 </html>
